# pi-bridge

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
bridge/: package-lock.json  package.json  server.mjs
examples/: demo.py  link_enforcement_demo.py
knowledge_service/: agents.py  llm_storage.py  main.py  models.py  skill_storage.py  storage.py  tool_storage.py  tools.py  transformers.py  utils.py
knowledge_service/static/: index.html
pi_bridge/: session.py  types.py
